Adds support for stream info

--- a/src/plugin.css
+++ b/src/plugin.css
@@ -39,18 +39,34 @@
 }
 
 .vjs-dash-hls-bitrate-switcher-menu .vjs-button {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .vjs-dash-hls-bitrate-switcher-menu .vjs-menu {
-    width: 20em;
-    left: -15em;
+  width: 20em;
+  left: -15em;
 }
 
 .vjs-dash-hls-bitrate-switcher-menu .vjs-menu .vjs-menu-content {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .vjs-dash-hls-bitrate-switcher-menu .vjs-menu li {
-    padding: 5px;
+  padding: 5px;
+}
+
+.vjs-dash-hls-bitrate-switcher .vjs-stream-info {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.vjs-dash-hls-bitrate-switcher .vjs-stream-info .vjs-stream-info-box {
+  background: rgb(0 0 0/50%);
+  color: #fff;
+  padding: 0.5em;
+  width: auto;
+  font-size: 12px;
+  border-radius: 3px;
+  line-height: 16px;
 }
