--- a/src/plugin.css
+++ b/src/plugin.css
@@ -58,7 +58,7 @@
 .vjs-dash-hls-bitrate-switcher .vjs-stream-info {
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 10px;
 }
 
 .vjs-dash-hls-bitrate-switcher .vjs-stream-info .vjs-stream-info-box {
